package com.studproj.axiom.domain.model;

public enum LinkType {
    BlockedBy,
    Blocks,
    ChildOf,
    Duplicates,
    ParentOf,
    RelatesTo,
}
