package com.studproj.axiom.domain.model;

public enum WorkItemStatus {
    New, Active, InDevelopment, InTesting, Resolved, Closed
}
