package com.studproj.axiom.domain.model;

public enum WorkItemType {
    Epic, Feature, UserStory, Task, Bug, Subtask
}
